fix: spacing for unplayable list items

--- a/src/features/layout.css
+++ b/src/features/layout.css
@@ -195,12 +195,12 @@ ytmusic-app ytmusic-popup-container tp-yt-iron-dropdown[data-bytm-hidden=true] {
 
 /* #MARKER anchor improvements */
 
-ytmusic-responsive-list-item-renderer .left-items {
+ytmusic-responsive-list-item-renderer:not([unplayable_]) .left-items {
   margin-right: 0 !important;
 }
 
 .bytm-carousel-shelf-anchor {
-  margin-right: 16px;
+  margin-right: var(--ytmusic-responsive-list-item-thumbnail-margin-right, 24px);
 }
 
 /* #MARKER volume slider */
